ifc-macros/test/nested_block_type_inference2.stderr
error: Cannot assign high expression to low variable
  --> $DIR/nested_block_type_inference2.rs:8:9
   |
8  | /         let a = {
9  | |             let x = 4;
10 | |             x + 1
11 | |         };
   | |__________^
   |
help: Low Variable
  --> $DIR/nested_block_type_inference2.rs:8:13
   |
8  |         let a = {
   |             ^
help: High Expression
  --> $DIR/nested_block_type_inference2.rs:8:17
   |
8  |           let a = {
   |  _________________^
9  | |             let x = 4;
10 | |             x + 1
11 | |         };
   | |_________^
